# CatchWord

./: .gitignore  LICENSE  README.md  build.bat  dev.bat
.claude/skills/architect/: SKILL.md
.claude/skills/capture-safety/: SKILL.md
.claude/skills/requirement-driving/: SKILL.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  vite.config.js  wordbook.html
app/src/: main.js  style.css  wordbook.css  wordbook.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: capture.rs  config.rs  hook.rs  lib.rs  main.rs  translator.rs  types.rs  wordbook.rs
docs/requirements/: 1. init.md  2. local_storage.md  3. ci_cd.md  4. multi_source.md  TRACKER.md
scripts/: release.bat
