[package]
name = "catchword"
version = "0.1.0"
edition = "2021"

[lib]
name = "catchword_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rdev = "0.5"
chrono = "0.4"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
